--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    hej
+    <h1>Hej Hej</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore dolorum, libero labore itaque cupiditate vel necessitatibus dolorem reiciendis magni provident quas harum totam a incidunt? Unde cum ex placeat odio.</p>
 </body>
 </html>
