--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 <body>
     <h1>Hej Hej</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore dolorum, libero labore itaque cupiditate vel necessitatibus dolorem reiciendis magni provident quas harum totam a incidunt? Unde cum ex placeat odio.</p>
+<nav>Meny</nav>
+<header>Bild</header>
+<main>Allt innehåll</main>
+<footer>sidfot</footer>
+
 </body>
 </html>
