--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 <header>Bild</header>
 <main>Allt innehåll</main>
 <footer>sidfot</footer>
-
+<img src="thumbs-up-4007573__480.webp" alt="">
 </body>
 </html>
